--- a/changelog.txt
+++ b/changelog.txt
@@ -53,9 +53,20 @@ TODO
 idea: OpenAMQ running somewhere, accepts RESTful accesses via Internet.  Web page shows up time and statistics of usage.  Prize for being able to crash the server... (Send us script, get your name on the web page)
 
 
+2008-10-03
+
+* added wireapi.h for WireAPI programs (1.3, 1.4)
+    FIX DOC wireapi
+
+2008-10-01
+
+* added: WireAPI postmortem facility for debugging lost/dropped messages (1.4, 11442->7).
+    FIX DOC wireapi
+
 2008-10-31
 
 * fixed: log file naming did not work when name with no extension was specified (1.2, 1.3, 1.4)
+* fixed: connections were not properly destroyed, causing memory leaks (1.3, 1.4 AMQ-593)
 
 2008-10-27
 
