--- a/changelog.txt
+++ b/changelog.txt
@@ -23,9 +23,6 @@ TODO
         - and also for federation connections
         - unless this file is used, will use default credentials
     - wiki.amq.org:
-        - update new version of 4-DMP for options flag
-        - write new specification for RestMS
-        - restore awesomer picture on wiki
         - index of all known AMQP products and what they support
     - make PAL arrived processing faster when possible
     - remove all content class variability in asl scripts
@@ -78,8 +75,6 @@ TODO
         - already records/replays via peering
         - need to include failover detection & recovery
     - rename base to base1 and reversion base2
-    - direct mode: allow unlimited connections from client (not 6)
-        - test cost of looking up via hash table
     - make regression test set for server
         - send to shared queue and read back
         - pubsub over topic exchange
@@ -96,9 +91,19 @@ TODO
     - redesign queue->consumer->channel using portals
     - also for exchange->binding->queue?
 
+2008-12-19
+
+* fixed: malloc now aborts if the process runs out of memory (DAMQ-22, 1.2, 1.3, 1.4)
+
+2008-12-17
+
+* added: support for AMQP/0.9.1 (1.3, 1.4)
+* fixed: WireAPI Direct Mode fixed to allow unlimited connections (AMQ-598) (1.3, 1.4)
+
 2008-12-10
 
 * fixed: icl_console output trims whitespace at end of line (1.3, 1.4)
+* fixed: SMT sockets crashed after constant use for 2^31 operations (BASE2-301) (1.2, 1.3, 1.4)
 
 2008-12-08
 
