--- a/changelog.txt
+++ b/changelog.txt
@@ -99,6 +99,11 @@ TODO
     - redesign queue->consumer->channel using portals
     - also for exchange->binding->queue?
 
+2008-12-30
+
+* added: console interface now shows bindings per exchange (1.3, 1.4) (http://www.openamq.org/issue:10)
+* added: ipr_config class now reports config files loaded (1.3, 1.4) (http://www.openamq.org/issue:34)
+
 2008-12-27
 
 * fixed: aborts if peering credentials are not found (1.3, 1.4) (AMQ-595)
