--- a/changelog.txt
+++ b/changelog.txt
@@ -98,6 +98,9 @@ TODO
     - redesign queue->consumer->channel using portals
     - also for exchange->binding->queue?
 
+2009-01-17
+
+* fixed: various Win32 compile errors and warnings (1.3, 1.4)
 
 2009-01-15
 
