--- a/changelog.txt
+++ b/changelog.txt
@@ -17,6 +17,9 @@ AMQP changes for 0.92
         - add/clarify routing and addressing properties
 
 TODO
+    - redesign console interface
+        - use portals
+        - use more restful model
     - projector exchange, generates test data
         - generate N random messages
         - immediately or with precise delays
@@ -100,7 +103,7 @@ TODO
 
 2009-02-01
 
-* fixed: crash in amq_content_basic_get_body() if content size was zero (issue:43).
+* fixed: crash in amq_content_basic_get_body() if content size was zero (1.3, 1.4, issue:43).
 
 2009-01-23
 
