http://www.openamq.org/issue:48

--- a/changelog.txt
+++ b/changelog.txt
@@ -102,6 +102,13 @@ TODO
     - redesign queue->consumer->channel using portals
     - also for exchange->binding->queue?
 
+2009-04-16
+
+* fixed: detect and reject attempts to declare durable queues (http://www.openamq.org/issue:54)
+* changed: base2 runtime now saves message to panic.log in case of exit (1.4, http://www.openamq.org/issue:50)
+* changed: removed archive_path from log file configuration (1.4, http://www.openamq.org/issue:48)
+* changed: log files are now written to /var/log/openamq (1.4, http://www.openamq.org/issue:48)
+
 2009-03-05
 
 * changed: backported small fixes to Direct Mode thread management from trunk to 1.3 (asl_client_session.gsl).
