--- a/changelog.txt
+++ b/changelog.txt
@@ -102,11 +102,16 @@ TODO
     - redesign queue->consumer->channel using portals
     - also for exchange->binding->queue?
 
+
 2009-04-20
 
 * changed: added --syslog support (--syslog option) (http://www.openamq.org/issue:51, 1.4)
 * changed: some debugging went to daily log, cleaned up (1.4)
 * changed: maximum length of log line reduced to 1024 octets (1.4)
+
+2009-04-17
+
+* fixed: server assertion on large direct mode messages (http://www.openamq.org/issue:53)
 
 2009-04-16
 
